# tacs.api/src/main/java/tp/tacs/api/model/RefreshAccessTokenBody.java
@@ -1,0 +1,80 @@
+package tp.tacs.api.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import org.springframework.validation.annotation.Validated;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+
+/**
+ * RefreshAccessTokenBody
+ */
+@Validated
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2020-09-11T00:18:42.309597800-03:00[America/Buenos_Aires]")
+
+
+public class RefreshAccessTokenBody   {
+  @JsonProperty("refreshToken")
+  private String refreshToken = null;
+
+  public RefreshAccessTokenBody refreshToken(String refreshToken) {
+    this.refreshToken = refreshToken;
+    return this;
+  }
+
+  /**
+   * Get refreshToken
+   * @return refreshToken
+  **/
+  @ApiModelProperty(value = "")
+  
+    public String getRefreshToken() {
+    return refreshToken;
+  }
+
+  public void setRefreshToken(String refreshToken) {
+    this.refreshToken = refreshToken;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    RefreshAccessTokenBody refreshAccessTokenBody = (RefreshAccessTokenBody) o;
+    return Objects.equals(this.refreshToken, refreshAccessTokenBody.refreshToken);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(refreshToken);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class RefreshAccessTokenBody {\n");
+    
+    sb.append("    refreshToken: ").append(toIndentedString(refreshToken)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
